# wow-realm-switch-utility

./: .bash_aliases  .gitignore  README.md  aliases  config.toml  launch_wow.config  launch_wow.sh
.github/workflows/: build.yaml
realmctl/: Cargo.toml
realmctl/src/: cli.rs  lib.rs  main.rs  workspace.rs
wow_version_switcher/: Cargo.toml
wow_version_switcher/src/: clipboard.rs  lib.rs  main.rs
wowctl/: Cargo.toml
wowctl/src/: base.rs  cli.rs  main.rs
