[package]
name = "realmctl"
version = "0.4.0"
edition = "2024"

[[bin]]
name = "realmctl"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.98"
arboard = { version = "3.5.0" }
clap = { version = "4.5.37", features = ["derive"] }
crc32fast = "1.4.2"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
shellexpand = "3.1.1"
toml = "0.8.22"

[dev-dependencies]
tempfile = "3.14"

[features]
default = ["workspaces"]
workspaces = []
